creat section about

--- a/index.html
+++ b/index.html
@@ -5,25 +5,42 @@
     <title>𝒁𝒐𝒉𝒓𝒂 𝑳𝒌𝒆𝒄𝒉𝒊𝒏𝒆 / 𝑷𝒐𝒓𝒕𝒇𝒊𝒍𝒊𝒐</title>
     <link rel="stylesheet" href="style.CSS">
     <link rel="shortcut icon" href="assets/lettre-z-.jpg" type="image/x-icon">
-    <script></script>
+    <script src="scripte.JS"></script>
 </head>
 <body>
     <!-----------Container section-------->
-    <div class="section-1">
-        <div>
-            <h1>Welcame To My Portfilio</h1>
+    <div id="header">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li> <a href="#">Home</a></li>
+                    <li> <a href="#">About</a></li>
+                    <li> <a href="#">Services</a></li>
+                    <li> <a href="#">Portfolio</a></li>
+                    <li> <a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="header-text">
+                <p>UI/UX Designer</p>
+                <h1>Hi, I'm <span>Zohra </span><br>lkchine From Tunis</h1>
+            </div>
         </div>
-         <div class="links">
-            <h2>Home</h2>
-            <h2>About</h2>
-            <h2>Work</h2>
-            <h2>Skills</h2>
-            <h2>Testimonial</h2>
-            <h2>Contact</h2>
+    </div>
+    <!-----------------about------------------->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+
+                </div> 
+
+            </div>
+
         </div>
-       
 
     </div>
+    
+
 
 
 </body>
